[package]
name = "nanite_reconstructor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
image = "0.24"
# autograph = { version = "0.1", default-features = true }
# autograph = { git = "https://github.com/charles-r-earp/autograph", default-features = true }
autograph = { path = "autograph", features = ["mnist", "iris", "bench", "derive", "tensor", "learn", "kmeans", "neural_network", "profile"] }
ndarray = "0.15.3"
tokio = { version = "1.9.0", features = ["full"] }
smol = "1.2.5"
argparse = "0.2.2"
indicatif = "0.16.2"
bincode = "1.3.3"
serde = "1.0.130"
rand = "0.8.4"
